# Ex_Algo_5

./: CMakeLists.txt  ConvertGrophToTree.cpp  HaxaNawardi.cpp  Homogenization.cpp  WolfOfWallstreet.cpp  test.cpp
